<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_fragment_list">Pokédex</string>
    <string name="subtitle_fragment_list">Search for Pokémon by name or using the \nNational Pokédex number.</string>
    <string name="edit_fragment_list">What Pokémon are you looking for?</string>
    <string name="tab_text_1">About</string>
    <string name="tab_text_2">Status</string>
    <string name="dexcription_evs">The ranges shown on the right are for a level 100 Pokémon. Maximum values are based on a beneficial nature, 252 EVs, 31 IVs; minimum values are based on a hindering nature, 0 EVs, 0 IVs.</string>
    <string name="text_effectiveness_type">The effectiveness of each type on</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_status_base_status">Base Status</string>
    <string name="frag_status_hp">HP</string>
    <string name="frag_status_attack">Attack</string>
    <string name="frag_status_defence">Defence</string>
    <string name="frag_status_sp_atk">Sp. Atk</string>
    <string name="frag_status_sp_def">Sp. Def</string>
    <string name="frag_status_speed">Speed</string>
    <string name="frag_status_total">Total</string>
    <string name="frag_status_type_defenses">Type Defenses</string>
    <string name="frag_status_min">Min</string>
    <string name="frag_status_max">Max</string>
    <string name="frag_sort_sort_title">Sort</string>
    <string name="frag_sort_sub_tlitle">Sort Pokémons alphabetically or by National Pokédex number!</string>
    <string name="frag_sort_btn_smallest_number_first">Smallest number first</string>
    <string name="frag_sort_btn_highest_number_first">Highest number first</string>
    <string name="frag_sort_btn_a_z">A-Z</string>
    <string name="frag_sort_btn_z_a">Z-A</string>
    <string name="frag_gen_title_generations">Generations</string>
    <string name="frag_gen_sub_title">Use search for generations to explore your Pokémon!</string>
    <string name="frag_gen_generation_i">Generation I</string>
    <string name="frag_gen_generation_ii">Generation II</string>
    <string name="frag_gen_generation_iii">Generation III</string>
    <string name="frag_gen_generation_iv">Generation IV</string>
    <string name="frag_gen_generation_v">Generation V</string>
    <string name="frag_gen_generation_vi">Generation VI</string>
    <string name="frag_gen_generation_vii">Generation VII</string>
    <string name="frag_gen_generation_viii">Generation VIII</string>
    <string name="frag_filter_title_filters">Filters</string>
    <string name="frag_filter_sub_title">Use advanced search to explore Pokémon by type, weakness, height and more!</string>
    <string name="frag_filter_type">Type</string>
    <string name="frag_filter_heights">Heights</string>
    <string name="frag_filter_weights">Weights</string>
    <string name="frag_filter_number_ranger">Number Ranger</string>
    <string name="frag_filter_btn_apply">Apply</string>
    <string name="frag_filter_btn_reset">Reset</string>
    <string name="frag_about_pok_dex_data">Pokédex Data</string>
    <string name="frag_about_species">Species</string>
    <string name="frag_about_height">Height</string>
    <string name="frag_about_weight">Weight</string>
    <string name="frag_about_training">Training</string>
    <string name="frag_about_ev_yield">EV Yield</string>
    <string name="frag_about_catch_rate">Catch Rate</string>
    <string name="frag_about_base_friendship">Base Friendship</string>
    <string name="frag_about_base_exp">Base Exp</string>
    <string name="frag_about_growth_rate">Growth Rate</string>
    <string name="frag_about_breeding">Breeding</string>
    <string name="frag_about_gender">Gender</string>
    <string name="frag_about_egg_groups">Egg Groups</string>
    <string name="frag_about_egg_cycle">Egg Cycle</string>
    <string name="not_found_Poke">Nenhum Pokemon encontrado.</string>
    <string name="text_detail_meters">m</string>
    <string name="text_detail_Kilo">Kg</string>
    <string name="text_detail_male">\"♂ \"</string>
    <string name="text_detail_female">\"♀ \"</string>
    <string name="type_not_found_filter_fragment">Not Found</string>
    <string name="weight_pokemon_not_found_filter_fragment">Pokemon com esse peso não encontrado</string>
    <string name="height_pokemon_not_found_filter_fragment">Pokemon com essa altura não encontrado</string>
    <string name="failed_to_retrieve_data">Erro ao tentar recuperar</string>
    <string name="try_again">Tentar novamente</string>

    <!-- Types Pokes -->
    <string name="Bug_Name_Resources">Bug</string>
    <string name="Dark_Name_Resources">Dark</string>
    <string name="Dragon_Name_Resources">Dragon</string>
    <string name="Electric_Name_Resources">Electric</string>
    <string name="Fairy_Name_Resources">Fairy</string>
    <string name="Fighting_Name_Resources">Fighting</string>
    <string name="Fire_Name_Resources">Fire</string>
    <string name="Flying_Name_Resources">Flying</string>
    <string name="Ghost_Name_Resources">Ghost</string>
    <string name="Grass_Name_Resources">Grass</string>
    <string name="Ground_Name_Resources">Ground</string>
    <string name="Ice_Name_Resources">Ice</string>
    <string name="Normal_Name_Resources">Normal</string>
    <string name="Poison_Name_Resources">Poison</string>
    <string name="Psychic_Name_Resources">Psychic</string>
    <string name="Rock_Name_Resources">Rock</string>
    <string name="Steel_Name_Resources">Steel</string>
    <string name="Water_Name_Resources">Water</string>

</resources>