<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_up_corner_rounded"
    android:backgroundTint="@color/white"
    android:padding="32dp"
    tools:context=".presenter.SortFragment">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/frag_sort_sort_title"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/frag_sort_sub_tlitle"
        android:textColor="@color/textGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <Button
        android:id="@+id/btn_smalllest_number_first"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/frag_sort_btn_smallest_number_first"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/backgroudInput"
        android:textColor="@color/textGray"
        app:layout_constraintTop_toBottomOf="@id/text_sub_title" />

    <Button
        android:id="@+id/btn_highest_number_first"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/frag_sort_btn_highest_number_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/backgroudInput"
        android:textColor="@color/textGray"
        app:layout_constraintTop_toBottomOf="@id/btn_smalllest_number_first" />
    <Button
        android:id="@+id/btn_A_to_Z"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/frag_sort_btn_a_z"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/backgroudInput"
        android:textColor="@color/textGray"
        app:layout_constraintTop_toBottomOf="@id/btn_highest_number_first" />
    <Button
        android:id="@+id/btn_Z_to_A"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/frag_sort_btn_z_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/backgroudInput"
        android:textColor="@color/textGray"
        app:layout_constraintTop_toBottomOf="@id/btn_A_to_Z" />

</androidx.constraintlayout.widget.ConstraintLayout>