<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="32dp"
    tools:context=".view.AboutFragment">


    <TextView
        android:id="@+id/text_poke_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/textGray"
        tools:text="Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. By soaking up the sun’s rays, the seed grows progressively larger."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_Pokedex_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_pok_dex_data"
        android:textSize="16sp"
        android:textColor="@color/typeGrass"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_poke_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_Species_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_species"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_Pokedex_data"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_Species_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Pokédex Data"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_Species_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_Species_description" />

    <TextView
        android:id="@+id/text_height_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_height"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_Species_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_height_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Pokédex Data"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_height_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_height_description" />

    <TextView
        android:id="@+id/text_weight_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_weight"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_height_value"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Pokédex Data"
        android:textColor="@color/textGray"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_weight_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_weight_description" />

    <TextView
        android:id="@+id/text_Training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_training"
        android:textSize="16sp"
        android:textColor="@color/typeGrass"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_weight_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_EV_Yield_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_ev_yield"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_Training"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_EV_Yield_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1 Special Attack"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_EV_Yield_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_EV_Yield_description" />

    <TextView
        android:id="@+id/text_catch_rate_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_catch_rate"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_EV_Yield_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_catch_rate_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="45"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_catch_rate_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_catch_rate_description" />

    <TextView
        android:id="@+id/text_catch_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="(5.9% with PokéBall, full HP)"
        android:textColor="@color/textGray"
        android:textSize="12sp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_catch_rate_text_value"
        app:layout_constraintStart_toEndOf="@+id/text_catch_rate_text_value"
        app:layout_constraintTop_toTopOf="@+id/text_catch_rate_text_value" />

    <TextView
        android:id="@+id/text_base_friendship_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_base_friendship"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_catch_rate_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_base_friendship_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="45"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_base_friendship_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_base_friendship_description" />

    <TextView
        android:id="@+id/text_base_friendship_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="(normal)"
        android:textColor="@color/textGray"
        android:textSize="12sp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_base_friendship_text_value"
        app:layout_constraintStart_toEndOf="@+id/text_base_friendship_text_value"
        app:layout_constraintTop_toTopOf="@+id/text_base_friendship_text_value" />

    <TextView
        android:id="@+id/text_base_exp_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_base_exp"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_base_friendship_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_base_exp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="64"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_base_exp_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_base_exp_description" />

    <TextView
        android:id="@+id/text_growth_rate_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_growth_rate"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_base_exp_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_growth_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Medium Slow"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_growth_rate_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_growth_rate_description" />

    <TextView
        android:id="@+id/text_breeding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_breeding"
        android:textSize="16sp"
        android:textColor="@color/typeGrass"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_growth_rate_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_Gender_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_gender"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_breeding"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_male_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="♂ 87.5%, "
        android:textColor="@color/typeFlying"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_Gender_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_Gender_description" />

    <TextView
        android:id="@+id/text_female_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="♀ 87.5%"
        android:textColor="@color/typeFairy"
        android:textSize="16sp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_male_description"
        app:layout_constraintStart_toEndOf="@+id/text_male_description"
        app:layout_constraintTop_toTopOf="@+id/text_male_description" />

    <TextView
        android:id="@+id/text_egg_group_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_egg_groups"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_Gender_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_egg_group_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Grass, Monster"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_egg_group_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_egg_group_description" />

    <TextView
        android:id="@+id/text_egg_cycle_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_about_egg_cycle"
        android:textSize="12sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_egg_group_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_egg_cycle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="45"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_egg_cycle_description"
        app:layout_constraintStart_toEndOf="@+id/text_Pokedex_data"
        app:layout_constraintTop_toTopOf="@+id/text_egg_cycle_description" />

    <TextView
        android:id="@+id/text_egg_cycle_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="(5.9% with PokéBall, full HP)"
        android:textColor="@color/textGray"
        android:textSize="12sp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_egg_cycle_value"
        app:layout_constraintStart_toEndOf="@+id/text_egg_cycle_value"
        app:layout_constraintTop_toTopOf="@+id/text_egg_cycle_value" />

</androidx.constraintlayout.widget.ConstraintLayout>