<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    tools:context=".ListPokeFragment">

    <ImageButton
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageButton
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sort"
        android:background="@color/white"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_filter"
        />
    <ImageButton
        android:id="@+id/btn_generation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_generation"
        android:background="@color/white"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_sort"
        />

    <TextView
        android:id="@+id/text_title_pokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_fragment_list"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btn_filter"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_subtitle_pokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        android:text="@string/subtitle_fragment_list"
        app:layout_constraintTop_toBottomOf="@id/text_title_pokedex"
        app:layout_constraintStart_toStartOf="@id/text_title_pokedex"
        />
    <EditText
        android:id="@+id/edit_search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_baseline_search"
        android:drawablePadding="4dp"
        android:hint="@string/edit_fragment_list"
        android:textColorHint="@color/textGray"
        android:textSize="16sp"
        android:background="@color/backgroudInput"
        app:layout_constraintTop_toBottomOf="@+id/text_subtitle_pokedex"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_search"
       app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>